# glacier-scan

./: .gitignore  LICENSE  LOCALHOST_SETUP.md  README.md  docker-compose.yml  next-i18next.config.js  package.json  pnpm-lock.yaml  test.md
app/: page.tsx
app/upload/: page.tsx
backend/database/: db
backend/fastapi-ai/: README.md  main.py  pyproject.toml  requirements.txt
backend/nestjs-api/: Dockerfile  package.json
frontend/: next-i18next.config.js  next.config.js  package.json  tailwind.config.js  vercel.json
frontend/src/components/auth/: AuthProvider.tsx  LoginForm.tsx
frontend/src/components/charts/: ComparisonChart.tsx  GlacierTrendChart.tsx  HealthScoreChart.tsx  MultiMetricChart.tsx
frontend/src/components/dashboard/: AlertsPanel.tsx  AnalysisResults.tsx  MetricsCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/map/: MapComponent.tsx
frontend/src/components/upload/: UploadForm.tsx
frontend/src/lib/: auth.ts  database.ts  maplibre.ts  supabase.ts
frontend/src/pages/: _app.tsx  _document.tsx  auth.tsx  dashboard.tsx  index.tsx  map.tsx  trends.tsx  upload.tsx
frontend/src/pages/analysis/: [id].tsx
frontend/src/pages/api/: alerts.ts  analyze-glacier.ts  glacier-images.ts  glaciers.ts  health.ts  test-db.ts
frontend/src/pages/api/analysis/: [id].ts
frontend/src/pages/results/: [id].tsx
frontend/src/styles/: globals.css
scripts/: 001_create_fake_data.sql  002_run_fake_data.sh  quick-start.sh  setup-env.sh  setup-python.sh  start-ai-service.sh  start-local.sh
supabase/migrations/: 001_initial_schema.sql  002_seed_data.sql
terraform/: main.tf  outputs.tf
